--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <title>pau'd'cast</title>
   </head>
   <body>
-    
+    <div id="container">
+
+    </div>
   </body>
+  <script src="js/getData.js" charset="utf-8"></script>
+  <script src="js/path.js" charset="utf-8"></script>
+  <script src="js/podcast.js" charset="utf-8"></script>
 </html>
