--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>pau'd'cast</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <div id="container">
+    <div id="container" class="container">
 
     </div>
   </body>
-  <script src="js/getData.js" charset="utf-8"></script>
-  <script src="js/path.js" charset="utf-8"></script>
-  <script src="js/podcast.js" charset="utf-8"></script>
+  <script type="text/javascript" src="js/getData.js" charset="utf-8"></script>
+  <script type="text/javascript" src="js/path.js" charset="utf-8"></script>
+  <script type="text/javascript" src="js/podcast.js" charset="utf-8"></script>
+  <script type="text/javascript" src="data/home.json" charset="utf-8"></script>
+
 </html>
