--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 <p>
   Création d'un lecteur de flux RSS pour podcast ! Nous créons le services "Pau'd'cast" à notre image !
+  <a href="./src/index.html"> lien </a>
 </p>
         </section>
 
