--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,14 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <div id="container" class="container">
+    <div id="container">
 
     </div>
+    <footer id="footer">
+      <br>
+      
+      <center>Created with love <span class = "glyphicon glyphicon-heart" aria-hidden="true"></span></center>
+    </footer>
   </body>
   <script type="text/javascript" src="js/getData.js" charset="utf-8"></script>
   <script type="text/javascript" src="js/path.js" charset="utf-8"></script>
