cross origin solved

--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,13 @@
     </div>
     <footer id="footer">
       <br>
-      
+
       <center>Created with love <span class = "glyphicon glyphicon-heart" aria-hidden="true"></span></center>
     </footer>
   </body>
-  <script type="text/javascript" src="js/getData.js" charset="utf-8"></script>
-  <script type="text/javascript" src="js/path.js" charset="utf-8"></script>
-  <script type="text/javascript" src="js/podcast.js" charset="utf-8"></script>
-  <script type="text/javascript" src="data/home.json" charset="utf-8"></script>
+  <script type="text/javascript" src="js/getData.js" charset="utf-8" crossorigin="use-credentials"></script>
+  <script type="text/javascript" src="js/path.js" charset="utf-8" crossorigin="use-credentials"></script>
+  <script type="text/javascript" src="js/podcast.js" charset="utf-8" crossorigin="use-credentials"></script>
+  <script type="text/javascript" src="data/home.json" charset="utf-8" crossorigin="use-credentials"></script>
 
 </html>
