--- a/src/index.html
+++ b/src/index.html
@@ -28,5 +28,8 @@
   <script type="text/javascript" src="js/path.js" charset="utf-8" crossorigin="use-credentials"></script>
   <script type="text/javascript" src="js/podcast.js" charset="utf-8" crossorigin="use-credentials"></script>
   <script type="text/javascript" src="data/home.json" charset="utf-8" crossorigin="use-credentials"></script>
+  <script type="text/javascript" src="data/radio/radioFrance.json" charset="utf-8" crossorigin="use-credentials"></script>
+  <script type="text/javascript" src="data/radio/RTL.json" charset="utf-8" crossorigin="use-credentials"></script>
+  <script type="text/javascript" src="data/radio/RTL2.json" charset="utf-8" crossorigin="use-credentials"></script>
   <script type="text/javascript" src="js/profile.js" charset="utf-8"></script>
 </html>
