--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
       <br>
 
       <center>Created with love <span class = "glyphicon glyphicon-heart" aria-hidden="true"></span></center>
+      <center><a href="template/documentation.html">Une petite documentation parce qu'on vous aime bien</a><span class = "glyphicon glyphicon-heart" aria-hidden="true"></span></center>
     </footer>
   </body>
   <script type="text/javascript" src="js/getData.js" charset="utf-8" crossorigin="use-credentials"></script>
