--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
+    <div class="menu">
+      <h1>Pau'd'cast</h1>
+    </div>
     <div id="container">
 
     </div>
