--- a/src/index.html
+++ b/src/index.html
@@ -36,4 +36,6 @@
   <script type="text/javascript" src="data/radio/RTL.json" charset="utf-8" crossorigin="use-credentials"></script>
   <script type="text/javascript" src="data/radio/RTL2.json" charset="utf-8" crossorigin="use-credentials"></script>
   <script type="text/javascript" src="js/profile.js" charset="utf-8"></script>
+  <script type="text/javascript" src="js/rss.js" charset="utf-8" crossorigin="use-credentials"></script>
+  <script type="text/javascript" src="js/item.js" charset="utf-8" crossorigin="use-credentials"></script>
 </html>
