--- a/src/index.html
+++ b/src/index.html
@@ -39,4 +39,5 @@
   <script type="text/javascript" src="js/profile.js" charset="utf-8"></script>
   <script type="text/javascript" src="js/rss.js" charset="utf-8" crossorigin="use-credentials"></script>
   <script type="text/javascript" src="js/item.js" charset="utf-8" crossorigin="use-credentials"></script>
+  <script type="text/javascript" src="js/save.js" charset="utf-8" crossorigin="use-credentials"></script>
 </html>
