--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,9 @@
   </head>
   <body>
     <div class="menu">
-      <h1>Pau'd'cast</h1>
+      <a href="#home" id="titre"><h1 >Pau'd'cast</h1></a>
     </div>
+    <canvas id="canvas" width="300" height="300"></canvas>
     <div id="container">
 
     </div>
@@ -40,4 +41,5 @@
   <script type="text/javascript" src="js/rss.js" charset="utf-8" crossorigin="use-credentials"></script>
   <script type="text/javascript" src="js/item.js" charset="utf-8" crossorigin="use-credentials"></script>
   <script type="text/javascript" src="js/save.js" charset="utf-8" crossorigin="use-credentials"></script>
+  <script type="text/javascript" src="js/easterEgg.js" charset="utf-8" crossorigin="use-credentials"></script>
 </html>
