--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="menu">
-      <a href="#home" id="titre"><h1 >Pau'd'cast</h1></a>
+      <a href="#home" id="titre" onclick="window.location.reload()"><h1 >Pau'd'cast</h1></a>
     </div>
     <canvas id="canvas" width="300" height="300"></canvas>
     <div id="loading">
